-----------------------------------------------------------------------------------------
	$Id: ChangeLog,v 1.592 2009-08-27 16:01:52 jluis Exp $
-----------------------------------------------------------------------------------------

2009-08-27	jluis
	* gmt_gdalread.[ch]:	Wrapper function to interface with the GDAL library
	* grdimage.c:		Modified (with #ifdefs) to allow minimalist images import
				using GDAL, via the gmt_gdalread function.
	* gmt_support.c:	Fixed bug in x_inc adjust. It was cosd (0.5 * (h->x_min + h->x_max))
				Instead of cosd (0.5 * (h->y_min + h->y_max))

2009-08-20	remko
	* pslib.c, pslib_inc.h:	ps_place_color now also adds the "set...color" operator, so
				that PSL->internal.paint_code could be removed.

2009-08-17	remko
	* gmt_plot.c, GMT_Chapter_{3,6}.tex:	Documentation on -JPoly added.
	* gmt_map.c:		Made frame and annotation of polyconic work properly.
	* {x2sys,mgd77,mgg}/makefile:	Solved problems with install/uninstall and missing *.h
				files in distro.

2009-08-15	remko
	* gmt_proj.[ch], gmt_map.c, gmt_init.c:	First stab at introducing polyconic projection.
				Not documented yet, but seems to work (-JPoly).

2009-07-24	pwessel
	* gmt_support.c:	The routine that checks if a points is inside or outside a
				polar cap had trouble when the points longitude exactly
				equalled a point on the polygon since round-off would 
				cause our test to fail.  Now hopefully fool-proof.
2009-07-23	pwessel
	* psmask.c:		With -D, the internal di,dj constant was set way too large.

2009-07-22	pwessel
	* gmt_shore.[ch]:	The -A+r|+l option was premature as more info in the GSHHS
				netcdf files are needed to properly skip features.  GSHHS 2.1
				will have this information so pscoast et al need to check
				for versions before attempting to use any of the +<modifiers>
2009-07-18	mtchandl
	* mgd77/mgd77sniffer.c:	Bug in -I option; needed to set bitpattern for bad faa.

2009-07-18	remko